--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="first_page">first page</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="open" />
+    <string name="close" />
+    <string name="name">Anand Srivastava</string>
+    <string name="skills">Skills</string>
 </resources>
